--- a/src/components/Add/Form/OfferTextarea/OfferTextarea.css
+++ b/src/components/Add/Form/OfferTextarea/OfferTextarea.css
@@ -1,11 +1,30 @@
-.add-form__label {
-  position: relative;
+.add-form__background-label {
+  padding: 1rem 2rem;
+  background-color: #fade42;
+  border-top-left-radius: 0.5rem;
+  border-top-right-radius: 0.5rem;
+}
+
+.add-form__background-label--span {
+  font-size: 1.5rem;
+}
+
+.add-form__background-label--offerBaseDescription {
+  width: 30%;
+}
+
+.add-form__background-label--offerExtendedDescription {
+  width: 60%;
+}
+
+.add-form__background-label--offerExtraDescription {
+  width: 100%;
 }
 
 .add-form__offer-textarea {
   color: inherit;
   padding: 1.5rem;
-  margin: 1rem 0;
+  margin: 0 0 1rem 0;
   background-color: #FFFFFF;
   height: 15rem;
   width: 100%;
