PRODPFIP-350 Strona widoku oferty zgodna z dostarczonymi ekranami (#221)
* Commit before rebase

* Modify CSS files for offer details to match UX design; Add missing translations

* Update some css files; Change translation key for showing personal data; Add missing icon for category 'others'

--- a/src/components/OfferDetails/Contact/OfferContact.css
+++ b/src/components/OfferDetails/Contact/OfferContact.css
@@ -1,24 +1,122 @@
-.offer-details__contact {
-  min-height: 20rem;
-  margin-top: 1rem;
+.contact__container  {
+  width: 92%;
+  margin: 0 auto;
   display: grid;
-  grid-template-columns: 40% 55%;
-  grid-column-gap: 4rem;
-  padding-left: 4rem;
+  grid-template-columns: auto;
+  grid-template-rows: 15rem minmax(min-content,max-content) minmax(10rem,max-content);
+  grid-template-areas:
+  "category"
+  "data"
+  "aboutme";
+  border-radius: 7px;
+  border: 0.5px solid #b1b6bf;
+  padding: 2.5rem;
+  word-wrap: break-word;
 }
 
-.offer-details__contact--data {
-  margin-top: 1rem;
-  margin-bottom: 1rem;
-  line-height: 3rem;
+.contact__section--category{
+  grid-area: category;
 }
 
-.offer-details__contact--button {
-  margin: 0 1rem;
-  background-color: #000;
-  border: solid 0.3rem #fade42;
-  color:#fade42;
-  cursor: pointer;
-  transition: all 0.5s;
-  padding: 0.5rem 1rem;
+.contact__section--data{
+  grid-area: data;
+}
+
+.contact__section--aboutme{
+  grid-area: aboutme;
+}
+
+.contact__category--img {
+  display: block;
+  margin: 0 auto;
+  max-height: 65%;
+}
+
+.contact__category--img-name{
+  padding-top:2rem;
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 2rem;
+  font-family: 'Lato-Thin', sans-serif;
+  font-weight: bold;
+}
+
+.contact__header--data{
+  text-transform: uppercase;
+  padding: 1rem 0 2rem 0;
+  font-size: 2rem;
+}
+
+.contact__header--aboutme{
+  text-transform: uppercase;
+  padding: 1rem 0 2rem 0;
+  font-size: 2rem;
+}
+
+.contact__p--big{
+  padding-bottom: 0.4rem;
+  font-size: 1.8rem;
+  font-family: 'Lato-Thin', sans-serif;
+}
+
+.contact__p--small{
+  font-size: 1.5rem;
+  font-family: 'Lato-Thin', sans-serif;
+  font-weight: bold;
+  text-align: justify;
+  line-height: 1.4;
+}
+
+.contact__button--unhide{
+  background-color: #FADE42;
+  border: none;
+  margin-top:1rem;
+  padding: 0.45rem 1rem 0.5rem 1rem;
+  margin: 1rem 0 2rem 0;
+  text-align: center;
+  font-size: 17px;
+  font-family: 'Lato-Thin', sans-serif;
+  font-weight: bold;
+}
+
+@media (min-width: 768px){
+  .contact__container  {
+    width: 70rem;
+    grid-template-columns: minmax(30rem,max-content)  minmax(30rem,max-content);
+    grid-template-rows: 30rem minmax(10rem,max-content);
+    grid-column-gap: 0.5em;
+    grid-template-areas:
+    "category data"
+    "aboutme aboutme";
+  }
+  .contact__section--category{
+    align-self: center;
+    justify-self: stretch;
+  }
+  .contact__section--data{
+    padding-left: 15%;
+  }
+  .contact__category--img {
+    display: block;
+    margin: auto;
+    max-height: 55%;
+  }
+  .contact__button--unhide{
+    margin-top: 2rem;
+  }
+  .contact__p--small{
+    font-size: 1.8rem;
+  }
+  .contact__p--big,.contact__category--img-name{
+    font-size: 2.5rem;
+  }
+  .contact__header--data,.contact__header--aboutme{
+    font-size: 2.4rem;
+  }
+}
+
+@media (min-width: 1025px){
+  .contact__container  {
+    padding: 3rem;
+  }
 }
