--- a/src/components/UI/SubmitButton/SubmitButton.css
+++ b/src/components/UI/SubmitButton/SubmitButton.css
@@ -37,14 +37,7 @@
   }
 
   .form__button--submit {
-    display: block;
-  max-height: 3.5rem;
-  padding: 1rem 3rem;
-  align-self: center;
-  border: none;
-  background: #000;
-  color: #fff;
-  cursor: pointer;
+    display: none;
   }
   .form__button--submit:disabled {
     background: #999;
