--- a/src/components/App/Header/Header.css
+++ b/src/components/App/Header/Header.css
@@ -47,12 +47,13 @@ header {
 }
 
 .logo__link {
+  grid-column: 1 / span 1;
   padding-left: 0.5rem;
 }
 
 nav {
   position: relative;
-  grid-column: 4 / span 11;
+  grid-column: 6 / span 6;
   display: grid;
   justify-items: end;
   align-items: center;
@@ -64,7 +65,7 @@ nav a {
 }
 
 .homepage-not-results nav {
-  margin: -1rem 0 0 0;
+  margin: 0;
 }
 
 .user-name {
@@ -148,6 +149,13 @@ nav a {
     justify-content: center
   }
 
+  .homepage-not-results .header__container {
+    display: grid;
+    grid-template-columns: repeat(12, 6rem);
+    grid-template-rows: 5.4rem 8rem;
+    justify-content: center
+  }
+
   .header__arrow {
     margin-right: 2.5rem;
   }
@@ -161,11 +169,15 @@ nav a {
     align-items: center;
   }
 
-  .homepage-not nav {
+  .homepage-not nav, .homepage-not-results nav {
     grid-column: 8 / span 5;
     margin: auto 3rem auto 0;
-
   }
+/*
+  .homepage-not-results nav {
+    grid-column: 8 / span 5;
+    margin: auto 3rem auto 0;
+  }*/
 
   .user-name {
     font-size: 1.6rem;
@@ -177,6 +189,10 @@ nav a {
   }
 
   .homepage-not .logo__link {
+    margin-left: 2.5rem
+  }
+
+  .homepage-not-results .logo__link {
     margin-left: 2.5rem
   }
 
@@ -211,8 +227,8 @@ nav a {
 
   .homepage-not-results .header__container {
     display: grid;
-    grid-template-columns: repeat(11, 1fr);
-    grid-template-rows: 6rem 8rem;
+    grid-template-columns: repeat(10, 10rem);
+    grid-template-rows: 5.4rem 8rem;
   }
 
   .logo__link {
@@ -224,8 +240,9 @@ nav a {
   }
 
   .homepage-not-results .logo__link {
-    margin-right: auto;
+    margin-left: 0;
   }
+
   nav {
     margin: auto 0;
   }
@@ -236,10 +253,10 @@ nav a {
   }
 
   .homepage-not-results nav {
-    display: flex;
-    width: 45rem;
-    margin: -1rem 0 0 8rem;
-    grid-column: 6 / span 11;
+    display: grid;
+    margin: auto 0;
+    grid-column: 6 / span 5;
+    grid-row: 1 / 2;
   }
 
   .homepage-not-results {
