--- a/src/components/App/Header/Header.css
+++ b/src/components/App/Header/Header.css
@@ -26,14 +26,16 @@ header {
 
 .header__container {
   display: grid;
-  grid-template-columns: repeat(11, 1fr);
+  grid-template-columns: repeat(5, 6.3rem);
   grid-template-rows: 5.4rem 8rem;
+  justify-content: center;
 }
 
 .homepage .header__container {
   display: grid;
-  grid-template-columns: repeat(11, 1fr);
+  grid-template-columns: repeat(5, 6.3rem);
   grid-template-rows: 5.4rem;
+  justify-content: center;
 }
 
 .homepage-not .header__container {
@@ -53,7 +55,7 @@ header {
 
 nav {
   position: relative;
-  grid-column: 6 / span 6;
+  grid-column: 2 / span 4;
   display: grid;
   justify-items: end;
   align-items: center;
