--- a/src/components/Search/SearchForm/SearchForm.css
+++ b/src/components/Search/SearchForm/SearchForm.css
@@ -11,23 +11,14 @@
   padding: 2rem 0;
 }
 
-.search__form {
+.search__form, .search__form-results {
   width: 95%;
-  margin: 0;
+  margin: 0 0 0 0.7rem;
   padding-top: 0;
 }
 
-.search__wrapper {
-  grid-column: 2 / span 9;
-  grid-row: 2 / 2;
-}
-
-.homepage-not .search__wrapper {
-  margin-top: 1rem;
-}
-
-.search__wrapper-results {
-  grid-column: 2 / span 9;
+.search__wrapper, .search__wrapper-results {
+  grid-column: 1 / span 5;
   grid-row: 2 / 2;
   margin-top: 1rem;
 }
