--- a/src/components/Search/SearchForm/SearchInput.css
+++ b/src/components/Search/SearchForm/SearchInput.css
@@ -5,10 +5,10 @@
   position: relative;
   box-shadow: 0 .2rem 1rem 0 rgba(0,0,0,.4);
 }
-
+/*
 .homepage-not-results .search__input-wrapper {
   margin-right: 1.1rem;
-}
+}*/
 
 .search__form-item {
   display: block;
