PRODPFIP-374 - Dostosowanie ekranu wyników wyszukiwania (#238)
* Add search results styles

* Improve styles of search results and pagination

* Fix test of Pagination after style changes

* Add condition of display price prefix

--- a/src/components/Search/SearchResults/FoundSearchResults/FoundSearchResults.css
+++ b/src/components/Search/SearchResults/FoundSearchResults/FoundSearchResults.css
@@ -1,38 +1,67 @@
-.search-results {
-  width: 80%;
-  margin: 5rem auto;
-  padding: 3rem 0;
-  border: 0.1rem solid #A9A9A9;
-  box-shadow: 1.4rem 1.2rem 0.9rem darkgrey;
-}
-
 .search-results__title {
-  font-weight: 700;
-  font-size: 3rem;
+  font-weight: normal;
+  font-size: 2.2rem;
   text-align: center;
+  padding: 2rem;
 }
 
-.search-results__list {
-  margin: 5rem 2rem;
-}
-
-.search-results__heading{
-  display: flex;
-  font-weight: 700;
-  margin: 4rem 2rem;
+.search-results__heading {
+  display: none;
 }
 
 .search-results__heading-item {
-  margin: 1.5rem 0;
+  margin: 0.8rem 0;
   font-size: 1.9rem;
 }
 
-.search-results__heading-wide {
-  width: 30rem;
-  flex-grow: 2;
-}
+@media (min-width: 768px) {
+  .search-results {
+    max-width: 118rem;
+    padding: 0 2.5rem;
+    margin: 5rem auto;
+    border-radius: 8px;
+  }
+  .search-results__heading {
+    display: grid;
+    grid-template-columns: 2fr 1fr 1fr 1fr;
+    text-align: center;
+    text-transform: uppercase;
+    margin: 0 auto;
+    background-color: #fade42;
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+  }
+  .search-results__heading-item {
+    margin: 1rem 0;
+    font-size: 2rem;
+  }
+  .search-results__list {
+    border-radius: 8px;
+    position: relative;
+    background: #fff;
+  }
+  .search-results__list:before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 8px;
+    background: #fade42;
+    z-index: -1;
+  }
+  .search-results__list-wrapper {
+    box-shadow: 0.1rem 0.2rem 1rem 0.5rem #9e9e9e33;
+    border-radius: 8px;
+  }
+  .search-results__title {
+    padding-bottom: 3rem;
+  }
+ }
 
-.search-results__heading-narrow {
-  width: 15rem;
-  flex-grow: 1;
-}
+ @media (min-width:1025px) {
+  .search-results__list {
+    border-radius: 0;
+  }
+  .search-results__heading-item {
+    margin: 0.8rem 0;
+  }
+ }
